<resources>
    <string name="app_name">Live MapChat</string>
    <string name="welcome_to_live_mapchat">Welcome to, \n Live MapChat</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="click_here_to_u_register_u">Click here to <u>Register</u></string>
    <string name="confirm_password">Confirm password</string>


    <!-- Firestore Strings -->
    <string name="collection_users">Users</string>
    <string name="collection_chatrooms">Chatrooms</string>
    <string name="collection_chat_messages">Chat Messages</string>
    <string name="collection_chatroom_user_list">User List</string>
    <string name="collection_user_locations">User Locations</string>
    <string name="todo">TODO</string>

    <!-- Intent extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_user_list">intent_user_list</string>
    <string name="intent_user_locations">intent_user_locations</string>
    <string name="intent_location">intent_location</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_message">new message...</string>

    <!-- Service and Broadcasts -->
    <string name="gps_location">gps_location</string>


    <!-- Fragments Names -->
    <string name="fragment_user_list">User List</string>
    <string name="fragment_image_list">Image List</string>

    <!-- Other Strings -->
    <string name="action_create_chatroom">Create Chatroom</string>
    <string name="action_leave_chatroom">Leave chatroom</string>
    <string name="action_chatroom_user_list">User list</string>
    <string name="action_profile">Profile</string>
    <string name="full_screen_btn">full screen btn</string>
    <string name="refresh_image_btn">Refresh Image btn</string>


    <string name="this_is_you">This is you</string>
    <string name="hello_there">Hello there,</string>
    <string name="welcome_back">Welcome back</string>


</resources>