<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_theme"
    android:fillViewport="true"
    tools:context=".loginregister.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:paddingStart="12dp"
            android:paddingEnd="2dp"
            android:text="@string/hello_there"
            android:textColor="#ffff"
            android:textSize="50sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingStart="12dp"
            android:paddingEnd="2dp"
            android:text="@string/welcome_back"
            android:textColor="#ffff"
            android:textSize="50sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/email_ET"
            android:layout_width="361dp"
            android:layout_height="45dp"
            android:layout_marginTop="65dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/custombtn"
            android:backgroundTint="#60ffffff"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="18dp"
            android:textColor="@color/white"
            android:textColorHint="#70ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/password"
            android:layout_width="361dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:background="@drawable/custombtn"
            android:backgroundTint="#60ffffff"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:paddingStart="18dp"
            android:textColorHint="#70ffffff"
            app:layout_constraintEnd_toEndOf="@+id/email_ET"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/email_ET"
            app:layout_constraintTop_toBottomOf="@+id/email_ET" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:background="@drawable/custombtn"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:indeterminateTint="@color/blue1"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/login_btn"
            app:layout_constraintEnd_toEndOf="@+id/login_btn"
            app:layout_constraintStart_toStartOf="@+id/login_btn"
            app:layout_constraintTop_toTopOf="@+id/login_btn" />

        <TextView
            android:id="@+id/register_new_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:letterSpacing="0.05"
            android:text="@string/click_here_to_u_register_u"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/login_btn"
            app:layout_constraintStart_toStartOf="@+id/login_btn"
            app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>