<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_theme"
    android:fillViewport="true"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:paddingStart="10dp"
            android:text="@string/welcome_to_live_mapchat"
            android:textColor="#ffff"
            android:textSize="50sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email_ET"
            android:layout_width="361dp"
            android:layout_height="45dp"
            android:layout_marginTop="35dp"
            android:autofillHints='emailAddress'
            android:background="@drawable/custombtn"
            android:backgroundTint="#60ffffff"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="18dp"
            android:textColor="@color/white"
            android:textColorHint="#70ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/regsiter_btn"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/custombtn"
            android:paddingStart="18dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorHint="#70ffffff"
            app:layout_constraintEnd_toEndOf="@+id/password_con"
            app:layout_constraintStart_toStartOf="@+id/password_con"
            app:layout_constraintTop_toBottomOf="@+id/password_con" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:visibility="invisible"
            android:indeterminateTint="@color/blue1"
            app:layout_constraintBottom_toBottomOf="@+id/regsiter_btn"
            app:layout_constraintEnd_toEndOf="@+id/regsiter_btn"
            app:layout_constraintStart_toStartOf="@+id/regsiter_btn"
            app:layout_constraintTop_toTopOf="@+id/regsiter_btn" />

        <EditText
            android:id="@+id/password_con"
            android:layout_width="361dp"
            android:layout_height="45dp"
            android:layout_marginTop="12dp"
            android:autofillHints="password"
            android:background="@drawable/custombtn"
            android:backgroundTint="#60ffffff"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="18dp"
            android:textColor="@color/white"
            android:textColorHint="#70ffffff"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="361dp"
            android:layout_height="45dp"
            android:layout_marginTop="12dp"
            android:autofillHints="password"
            android:background="@drawable/custombtn"
            android:backgroundTint="#60ffffff"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="18dp"
            android:textColor="@color/white"
            android:textColorHint="#70ffffff"
            app:layout_constraintEnd_toEndOf="@+id/email_ET"
            app:layout_constraintStart_toStartOf="@+id/email_ET"
            app:layout_constraintTop_toBottomOf="@+id/email_ET" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>